third_party/move/move-compiler-v2/tests/more-v1/parser/use_inner_scope_invalid.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/use_inner_scope_invalid.move:6:9
  │
6 │         use 0x1::M::foo;
  │         ^^^
  │         │
  │         Unexpected 'use'
  │         Expected an expression term
